--- a/mods/index.html
+++ b/mods/index.html
@@ -9,21 +9,21 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-df1b7bbc.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-0e3828d2.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-17d039dd.js">
-		<link rel="modulepreload" href="/_app/pages/mods.svelte-e39073b5.js">
-		<link rel="modulepreload" href="/_app/chunks/SmallCard-0c6387b4.js">
-		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-85b26c78.js">
+		<link rel="modulepreload" href="/_app/start-93dc9ec1.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-bfc84274.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-bed329e8.js">
+		<link rel="modulepreload" href="/_app/pages/mods.svelte-f40805a0.js">
+		<link rel="modulepreload" href="/_app/chunks/SmallCard-413a0945.js">
+		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-0926d9a1.js">
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
-		<link rel="stylesheet" href="/_app/assets/pages/mods.svelte-9b050203.css">
+		<link rel="stylesheet" href="/_app/assets/pages/mods.svelte-9606c128.css">
 		<link rel="stylesheet" href="/_app/assets/SmallCard-a1f30d3e.css">
 		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
 
 		<script type="module">
-			import { start } from "/_app/start-df1b7bbc.js";
+			import { start } from "/_app/start-93dc9ec1.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -36,8 +36,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-17d039dd.js"),
-						import("/_app/pages/mods.svelte-e39073b5.js")
+						import("/_app/pages/__layout.svelte-bed329e8.js"),
+						import("/_app/pages/mods.svelte-f40805a0.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -56,15 +56,11 @@
 
 <br>
 <ul class="justify-content-center mb-5 nav nav-pills"><li class="nav-item"><a href="/" class="nav-link">Home</a></li><li class="nav-item"><a href="/mods" class="nav-link active">My Mods</a></li><li class="nav-item"><a href="/vanillatweaks" class="nav-link">VanillaTweaks</a></li></ul>
-<div class="container"><div class="row"><td class=""><h1 id="title" class="svelte-v8bwor">My Mods</h1>
-      <h3><u>Mods for forge</u></h3>
-        <div id="forge" class="justify-content-center card-group">
-        </div><h3><u>Mods for fabric</u></h3>
-        <div id="fabric" class="justify-content-center card-group">
-        </div>
+<div class="container"><div class="row"><td class="">
+        Loading the page please wait
       
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-10">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-10" class="svelte-t4gouc"></button>
+      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-36">Dark Theme</span>
+  <button role="switch" aria-checked aria-labelledby="switch-36" class="svelte-t4gouc"></button>
 </div></td></div></div>
 
 
