--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-d43bb6d2.js">
+		<link rel="modulepreload" href="/_app/start-84ff2cdf.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-bfc84274.js">
 		<link rel="modulepreload" href="/_app/pages/__layout.svelte-ca9a1db4.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-03fcb451.js">
-		<link rel="modulepreload" href="/_app/chunks/SmallCard-884e56fa.js">
+		<link rel="modulepreload" href="/_app/pages/index.svelte-2a65d3ef.js">
+		<link rel="modulepreload" href="/_app/chunks/SmallCard-f643c781.js">
 		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-0926d9a1.js">
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
 
 		<script type="module">
-			import { start } from "/_app/start-d43bb6d2.js";
+			import { start } from "/_app/start-84ff2cdf.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -36,7 +36,7 @@
 					error: null,
 					nodes: [
 						import("/_app/pages/__layout.svelte-ca9a1db4.js"),
-						import("/_app/pages/index.svelte-03fcb451.js")
+						import("/_app/pages/index.svelte-2a65d3ef.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -74,23 +74,23 @@
         <hr>
         <section><h2>Links</h2>
           <br>
-          <div class="justify-content-center card-group"><div id="" class="bg-dark custom-card card" style=""><a href="https://www.twitter.com/strikerrocker"><img class="card-img-top" src="./assets/twitter_light.png" alt="Twitter logo">
-    <div class="info_card center card-body"><h5 class="card_text card-title">Twitter - StrikerRocker</h5>
+          <div class="justify-content-center card-group"><div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.twitter.com/strikerrocker"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitter_light.png" alt="Twitter logo">
+    <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Twitter - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style=""><a href="https://discord.gg/tqcqeSj"><img class="card-img-top" src="./assets/Discord-Logo-Color.png" alt="Discord logo">
-    <div class="info_card center card-body"><h5 class="card_text card-title">Discord - StrikerRocker#7058</h5>
+            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://discord.gg/tqcqeSj"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/Discord-Logo-Color.png" alt="Discord logo">
+    <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Discord - StrikerRocker#7058</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style=""><a href="https://www.github.com/strikerrocker"><img class="card-img-top" src="./assets/github_light.png" alt="Github logo">
-    <div class="info_card center card-body"><h5 class="card_text card-title">Github - StrikerRocker</h5>
+            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.github.com/strikerrocker"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/github_light.png" alt="Github logo">
+    <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Github - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style=""><a href="https://www.curseforge.com/members/strikerrocker/projects"><img class="card-img-top" src="./assets/curse-vertical_lightbg.png" alt="CurseForge logo">
-    <div class="info_card center card-body"><h5 class="card_text card-title">CurseForge - StrikerRocker</h5>
+            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.curseforge.com/members/strikerrocker/projects"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/curse-vertical_lightbg.png" alt="CurseForge logo">
+    <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">CurseForge - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style=""><a href="https://www.twitch.tv/strikerrocker/"><img class="card-img-top" src="./assets/twitch.png" alt="Twitch logo">
-    <div class="info_card center card-body"><h5 class="card_text card-title">Twitch - StrikerRocker</h5>
+            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.twitch.tv/strikerrocker/"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitch.png" alt="Twitch logo">
+    <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Twitch - StrikerRocker</h5>
       </div></a></div></div></section></main>
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-24">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-24" class="svelte-t4gouc"></button>
+      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-63">Dark Theme</span>
+  <button role="switch" aria-checked aria-labelledby="switch-63" class="svelte-t4gouc"></button>
 </div></td></div></div>
 
 
