--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-d69c7032.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-bfc84274.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-ca9a1db4.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-d3da0497.js">
-		<link rel="modulepreload" href="/_app/chunks/SmallCard-f42c77b8.js">
-		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-0926d9a1.js">
+		<link rel="modulepreload" href="/_app/start-1b555c74.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-d5d50c33.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-2d97e58a.js">
+		<link rel="modulepreload" href="/_app/pages/index.svelte-fd67e250.js">
+		<link rel="modulepreload" href="/_app/chunks/SmallCard-15412d03.js">
+		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-bd8f6231.js">
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
 
 		<script type="module">
-			import { start } from "/_app/start-d69c7032.js";
+			import { start } from "/_app/start-1b555c74.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -35,8 +35,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-ca9a1db4.js"),
-						import("/_app/pages/index.svelte-d3da0497.js")
+						import("/_app/pages/__layout.svelte-2d97e58a.js"),
+						import("/_app/pages/index.svelte-fd67e250.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -74,28 +74,28 @@
         <hr>
         <section><h2>Links</h2>
           <br>
-          <div class="justify-content-center card-group"><div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.twitter.com/strikerrocker" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitter_light.png" alt="Twitter logo">
+          <div class="justify-content-center card-group"><div id="" class="bg-light custom-card card" style="border-radius:20px;"><a href="https://www.twitter.com/strikerrocker" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitter_light.png" alt="Twitter logo">
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Twitter - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://discord.gg/tqcqeSj" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/Discord-Logo-Color.png" alt="Discord logo">
+            <div id="" class="bg-light custom-card card" style="border-radius:20px;"><a href="https://discord.gg/tqcqeSj" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/Discord-Logo-Color.png" alt="Discord logo">
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Discord - StrikerRocker#7058</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.github.com/strikerrocker" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/github_light.png" alt="Github logo">
+            <div id="" class="bg-light custom-card card" style="border-radius:20px;"><a href="https://www.github.com/strikerrocker" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/github_light.png" alt="Github logo">
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Github - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.curseforge.com/members/strikerrocker/projects" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/curse-vertical_lightbg.png" alt="CurseForge logo">
+            <div id="" class="bg-light custom-card card" style="border-radius:20px;"><a href="https://www.curseforge.com/members/strikerrocker/projects" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/curse-vertical_lightbg.png" alt="CurseForge logo">
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">CurseForge - StrikerRocker</h5>
       </div></a></div>
-            <div id="" class="bg-dark custom-card card" style="border-radius:20px;"><a href="https://www.twitch.tv/strikerrocker/" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitch.png" alt="Twitch logo">
+            <div id="" class="bg-light custom-card card" style="border-radius:20px;"><a href="https://www.twitch.tv/strikerrocker/" target="_blank"><img style="border-top-left-radius:20px;border-top-right-radius:20px;" class="card-img-top" src="./assets/twitch.png" alt="Twitch logo">
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Twitch - StrikerRocker</h5>
       </div></a></div></div></section></main>
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-68">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-68" class="svelte-t4gouc"></button>
+      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-5">Dark Theme</span>
+  <button role="switch" aria-checked aria-labelledby="switch-5" class="svelte-t4gouc"></button>
 </div></td></div></div>
 
 
