--- a/mods/index.html
+++ b/mods/index.html
@@ -9,12 +9,12 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-d69c7032.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-bfc84274.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-ca9a1db4.js">
-		<link rel="modulepreload" href="/_app/pages/mods.svelte-6a3f2327.js">
-		<link rel="modulepreload" href="/_app/chunks/SmallCard-f42c77b8.js">
-		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-0926d9a1.js">
+		<link rel="modulepreload" href="/_app/start-1b555c74.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-d5d50c33.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-2d97e58a.js">
+		<link rel="modulepreload" href="/_app/pages/mods.svelte-3ba786bb.js">
+		<link rel="modulepreload" href="/_app/chunks/SmallCard-15412d03.js">
+		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-bd8f6231.js">
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
@@ -23,7 +23,7 @@
 		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
 
 		<script type="module">
-			import { start } from "/_app/start-d69c7032.js";
+			import { start } from "/_app/start-1b555c74.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -36,8 +36,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-ca9a1db4.js"),
-						import("/_app/pages/mods.svelte-6a3f2327.js")
+						import("/_app/pages/__layout.svelte-2d97e58a.js"),
+						import("/_app/pages/mods.svelte-3ba786bb.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -58,10 +58,7 @@
 <ul class="justify-content-center mb-5 nav nav-pills"><li class="nav-item"><a href="/" class="nav-link">Home</a></li><li class="nav-item"><a href="/mods" class="nav-link active">My Mods</a></li><li class="nav-item"><a href="/vanillatweaks" class="nav-link">VanillaTweaks</a></li></ul>
 <div class="container"><div class="row"><td class="">
         Loading the page please wait
-      
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-62">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-62" class="svelte-t4gouc"></button>
-</div></td></div></div>
+      </td></div></div>
 
 
 
