--- a/vanillatweaks/index.html
+++ b/vanillatweaks/index.html
@@ -9,11 +9,11 @@
 
 		
 
-		<link rel="modulepreload" href="/_app/start-d69c7032.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-bfc84274.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-ca9a1db4.js">
-		<link rel="modulepreload" href="/_app/pages/vanillatweaks.svelte-819378b7.js">
-		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-0926d9a1.js">
+		<link rel="modulepreload" href="/_app/start-1b555c74.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-d5d50c33.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-2d97e58a.js">
+		<link rel="modulepreload" href="/_app/pages/vanillatweaks.svelte-9b046b85.js">
+		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-bd8f6231.js">
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
 		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
 
 		<script type="module">
-			import { start } from "/_app/start-d69c7032.js";
+			import { start } from "/_app/start-1b555c74.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -34,8 +34,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-ca9a1db4.js"),
-						import("/_app/pages/vanillatweaks.svelte-819378b7.js")
+						import("/_app/pages/__layout.svelte-2d97e58a.js"),
+						import("/_app/pages/vanillatweaks.svelte-9b046b85.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -89,10 +89,7 @@
         <h3>Links</h3>
         <ul><li><a href="https://minecraft.curseforge.com/projects/vanillatweaks" class="svelte-gq7fzv">CurseForge</a></li>
           <li><a href="https://github.com/StrikerRockers-Mods/VanillaTweaks/" class="svelte-gq7fzv">Source code on github</a></li></ul></div>
-      
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-94">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-94" class="svelte-t4gouc"></button>
-</div></td></div></div>
+      </td></div></div>
 
 
 
