--- a/index.html
+++ b/index.html
@@ -5,48 +5,37 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" />
-	
-
-		
-
-		<link rel="modulepreload" href="/_app/start-89f564f6.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-d5d50c33.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-2d97e58a.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-fd67e250.js">
-		<link rel="modulepreload" href="/_app/chunks/SmallCard-15412d03.js">
-		<link rel="modulepreload" href="/_app/chunks/ThemeSlider-bd8f6231.js">
-		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
-		<link rel="stylesheet" href="/_app/assets/vendor-cf063f61.css">
-		<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
-		<link rel="stylesheet" href="/_app/assets/SmallCard-a1f30d3e.css">
-		<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
-
-		<script type="module">
-			import { start } from "/_app/start-89f564f6.js";
-			start({
-				target: document.querySelector("#svelte"),
-				paths: {"base":"","assets":""},
-				session: {},
-				host: location.host,
-				route: true,
-				spa: false,
-				trailing_slash: "never",
-				hydrate: {
-					status: 200,
-					error: null,
-					nodes: [
-						import("/_app/pages/__layout.svelte-2d97e58a.js"),
-						import("/_app/pages/index.svelte-fd67e250.js")
-					],
-					page: {
-						host: location.host, // TODO this is redundant
-						path: "/",
-						query: new URLSearchParams(""),
-						params: {}
-					}
-				}
-			});
-		</script>
+	<meta http-equiv="content-security-policy" content="">
+	<link rel="stylesheet" href="/_app/assets/vendor-28d9e71a.css">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a85feae.css">
+	<link rel="stylesheet" href="/_app/assets/SmallCard-a1f30d3e.css">
+	<link rel="stylesheet" href="/_app/assets/ThemeSlider-e68f95e7.css">
+	<link rel="modulepreload" href="/_app/start-b9b71618.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-5bc27e00.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-d3434455.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-e98b9ee0.js">
+	<link rel="modulepreload" href="/_app/chunks/SmallCard-c4824086.js">
+	<link rel="modulepreload" href="/_app/chunks/ThemeSlider-226a4c30.js"><script type="module">
+		import { start } from "/_app/start-b9b71618.js";
+		start({
+			target: document.querySelector("#svelte"),
+			paths: {"base":"","assets":""},
+			session: {},
+			route: true,
+			spa: false,
+			trailing_slash: "never",
+			hydrate: {
+				status: 200,
+				error: null,
+				nodes: [
+					import("/_app/pages/__layout.svelte-d3434455.js"),
+						import("/_app/pages/index.svelte-e98b9ee0.js")
+				],
+				url: new URL("http://sveltekit-prerender/"),
+				params: {}
+			}
+		});
+	</script>
 </head>
 
 <body>
@@ -94,14 +83,11 @@
 
     <div style="border-bottom-left-radius:20px;border-bottom-right-radius:20px;" class="info_card center card-body"><h5 class="card_text card-title">Twitch - StrikerRocker</h5>
       </div></a></div></div></section></main>
-      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-31">Dark Theme</span>
-  <button role="switch" aria-checked aria-labelledby="switch-31" class="svelte-t4gouc"></button>
+      <div class="s--slider svelte-t4gouc" style="font-size:20px"><span id="switch-82">Dark Theme</span>
+  <button role="switch" aria-checked="true" aria-labelledby="switch-82" class="svelte-t4gouc"></button>
 </div></td></div></div>
 
-
-
-			
-		</div>
+</div>
 </body>
 
 </html>
